# Jellyfin-Playlist-Tools

./: .gitignore  README.md  pyproject.toml
src/: README.md
src/JellyfinPlaylistTools/API/: JellyfinAPI.py
src/JellyfinPlaylistTools/Scripts/: Scripts.py  Utilities.py  __init__.py
